--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,5 @@
   "image": "mcr.microsoft.com/devcontainers/php:1-8.2-bullseye",
   "features": {
   },
-  "onCreateCommand": "sudo rm -r /usr/lib/cgi-bin; sudo ln -s $(pwd) /usr/lib/cgi-bin"
+  "onCreateCommand": "./.devcontainer/init.sh"
 }
