pre-configure apache server

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,6 @@
   "image": "mcr.microsoft.com/devcontainers/php:1-8.2-bullseye",
   "features": {
   },
-  "onCreateCommand": "bash ./.devcontainer/init.sh"
+  "onCreateCommand": "bash ./.devcontainer/init.sh",
+  "forwardPorts": [80]
 }
